<resources>
    <string name="app_name">Ridr</string>

    <string name="error_implement_fragment_interaction_listener">must implement OnFragmentInteractionListener</string>
    <string name="error_implement_frag_interact_list">must implement OnFragmentInteractionListener</string>

    <string name="map_fragment_map_marker_alpha">0.6</string>

    <string name="error_load_route">Ошибка загрузки маршрута</string>
    <string name="retry">ПОВТОР</string>

    <string name="authentication_text">Вход</string>
    <string name="email_field">Email</string>
    <string name="pass_field">Пароль</string>
    <string name="registration_link">ЗАРЕГИСТРИРОВАТЬСЯ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="license_agreement">При регистрации вы принимаете условия пользовательского соглашения и политику о данных пользователей</string>
    <string name="hint_email_phone_text">Введите номер телефона или электронную почту</string>
    <string name="choose_role_driver_btn">Я-водитель</string>
    <string name="сhoose_role_passenger_btn">Я-пассажир</string>
    <string name="objects_around_text">Сейчас рядом с Вами</string>
    <string name="user_name">Имя</string>
    <string name="raiting_text">Рейтинг</string>
    <string name="finish_route">Финиш</string>
    <string name="start_route">Старт</string>
    <string name="registration_header_text">Регистрация</string>
    <string name="edit_name_auth">Введите имя</string>
    <string name="edit_email">Введите email</string>
    <string name="edit_phone_auth">Номер телефона</string>
    <string name="gender_text">Ваш пол</string>
    <string name="gender_female">Женский</string>
    <string name="gender_male">Мужской</string>
    <string name="finish_registration_text_btn">Зарегистрироваться</string>
    <string name="enter_email_phone_label">Зарегистрировать указанную почту</string>
    <string name="date_new_trip">Дата поездки</string>
    <string name="start_from_hint">Откуда</string>
    <string name="authorisation_error_text">Пожалуйста заполните все поля</string>
    <string name="authorisation_success_text">Вход успешно выполнен</string>
    <string name="edit_text_email_phone_hint">xxx@xxx.xx</string>
    <string name="edit_text_user_name_hint">Введите имя</string>
    <string name="registration_error_text">Введите телефон или почту и пароль</string>
    <string name="driver_success_text">Вы вошли как водитель</string>
    <string name="passenger_success_text">Вы вошли как пассажир</string>
    <string name="text_around_you">Сейчас рядом с Вами</string>
    <string name="inf_trip_label">Информация о поездке</string>
    <string name="point_start_label">Точка старт</string>
    <string name="point_finish_label">Точка финиш</string>
    <string name="time_example">00:00</string>
    <string name="price_label">200 руб.</string>
    <string name="price_trip_label">Цена поездки</string>
    <string name="age_label">Возраст</string>
    <string name="trip_quantity_label">Поездок</string>
    <string name="request_trip_text_btn">ЗАПРОСИТЬ ПОЕЗДКУ</string>
    <string name="invalid_email_or_password">Неправильный email или пароль</string>


    <string name="attantion">Логин в виде xx@xx.xx. Пароль минимум 6 символов. Для регистрации ещё и имя </string>
    <string name="hint_enter_password">Введите пароль</string>
    <string name="change">CHANGE</string>
    <string name="route_is_not_selected">Route is not selected</string>
    <string name="map_fragment_tag">mapTag</string>
    <string name="route_status_fragment_tag">routeStatusTag</string>
    <string name="route_data_fragment_tag">routeSelectTag</string>
    <string name="user_list_fragment_tag">userListTag</string>
    <string name="switch_text_passenger">Пассажир</string>
    <string name="authorize_title">Авторизация...</string>
    <string name="end_route_point">Конечная точка маршрута</string>
    <string name="start_route_point">Начальная точка маршрута</string>

</resources>
