<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/material_vertical_padding">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/authentication_text"
        android:textSize="27sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/email_field"
        android:minWidth="@dimen/edit_text_email_min_width"
        android:text="qw@qw.qw" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/pass_field"
        android:inputType="textPassword"
        android:minWidth="@dimen/edit_text_email_min_width"
        android:text="123456" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_choose_driver"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_button"
        android:text="@string/choose_role_driver_btn"
        android:textAlignment="center"
        android:textSize="20sp" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_choose_passenger"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_button"
        android:text="@string/сhoose_role_passenger_btn"
        android:textAlignment="center"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/registration_link"
        android:textColorLink="@color/colorPrimaryLight" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
