<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/authentication_text"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_email"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="280dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="qw@qw.qw"
        android:hint="@string/email_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_password"
        android:inputType="textPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/pass_field"
        android:text="123456"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_choose_driver"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_button"
        android:text="@string/choose_role_driver_btn"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_choose_passenger"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_button"
        android:text="@string/сhoose_role_passenger_btn"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/registration_link"
        android:textColorLink="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
